--- a/packages/cit-quickstart-linux/pom.xml
+++ b/packages/cit-quickstart-linux/pom.xml
@@ -216,15 +216,17 @@
                 </dependency>
                 <dependency>
                     <groupId>com.intel.mtwilson.openstack.packages</groupId>
-                    <artifactId>mtwilson-openstack-trusted-node-ubuntu</artifactId>
+                    <artifactId>mtwilson-openstack-trusted-node</artifactId>
                     <version>${project.version}</version>
                     <type>bin</type>
+                    <classifier>ubuntu</classifier>
                 </dependency>
                 <dependency>
                     <groupId>com.intel.mtwilson.openstack.packages</groupId>
-                    <artifactId>mtwilson-openstack-trusted-node-rhel</artifactId>
+                    <artifactId>mtwilson-openstack-trusted-node</artifactId>
                     <version>${project.version}</version>
                     <type>bin</type>
+                    <classifier>rhel</classifier>
                 </dependency>
                 <dependency>
                     <groupId>com.intel.mtwilson.attestation-hub</groupId>
@@ -412,15 +414,17 @@
                 </dependency>
                 <dependency>
                     <groupId>com.intel.mtwilson.openstack.packages</groupId>
-                    <artifactId>mtwilson-openstack-trusted-node-ubuntu</artifactId>
+                    <artifactId>mtwilson-openstack-trusted-node</artifactId>
                     <version>${project.version}</version>
                     <type>bin</type>
+                    <classifier>ubuntu</classifier>
                 </dependency>
                 <dependency>
                     <groupId>com.intel.mtwilson.openstack.packages</groupId>
-                    <artifactId>mtwilson-openstack-trusted-node-rhel</artifactId>
+                    <artifactId>mtwilson-openstack-trusted-node</artifactId>
                     <version>${project.version}</version>
                     <type>bin</type>
+                    <classifier>rhel</classifier>
                 </dependency>
                 <dependency>
                     <groupId>com.intel.mtwilson.attestation-hub</groupId>
