--- a/features/cit-quickstart-wizard/pom.xml
+++ b/features/cit-quickstart-wizard/pom.xml
@@ -117,12 +117,12 @@
         <dependency>
         <groupId>com.intel.mtwilson.services</groupId>
     <artifactId>mtwilson-user-management-model</artifactId>
-        <version>3.0-SNAPSHOT</version>
+        <version>${project.version}</version>
         </dependency>
         <dependency>
         <groupId>com.intel.mtwilson.services</groupId>
     <artifactId>mtwilson-user-management-client-jaxrs2</artifactId>
-        <version>3.0-SNAPSHOT</version>
+        <version>${project.version}</version>
         </dependency>
 
         
