--- a/packages/cit-quickstart-linux/pom.xml
+++ b/packages/cit-quickstart-linux/pom.xml
@@ -112,6 +112,20 @@
                                         <mkdir dir="/tmp/makeself"/>
                                         <chmod perm="700" dir="/tmp/makeself"/>
                                         
+                                        <!-- ant run task for maven build pom_ubuntu and pom_rhel-->
+										
+                                        <exec executable="mvn"  dir="${project.basedir}" resultproperty="mavenExitBuildPackagesIntegrity" failonerror="false">
+                                            <arg value="install"/>
+                                            <arg value="-fpom_ubuntu.xml"/>
+                                            <arg value="-Dintegrity"/>
+                                        </exec>
+                                        
+                                        <exec executable="mvn"  dir="${project.basedir}" resultproperty="mavenExitBuildPackagesIntegrity" failonerror="false">
+                                            <arg value="install"/>
+                                            <arg value="-fpom_rhel.xml"/>
+                                            <arg value="-Dintegrity"/>
+                                        </exec>
+                                        				
                                         <!-- package directory contains everything that should be included in the installer -->
                                         <mkdir dir="${project.build.directory}/${makeself.name}-${integrity.name}"/>
                                         <chmod perm="700">
@@ -206,20 +220,6 @@
                     <type>bin</type>
                 </dependency>
                 <dependency>
-                    <groupId>com.intel.mtwilson.openstack.packages</groupId>
-                    <artifactId>mtwilson-openstack-trusted-node</artifactId>
-                    <version>${project.version}</version>
-                    <type>bin</type>
-                    <classifier>ubuntu</classifier>
-                </dependency>
-                <dependency>
-                    <groupId>com.intel.mtwilson.openstack.packages</groupId>
-                    <artifactId>mtwilson-openstack-trusted-node</artifactId>
-                    <version>${project.version}</version>
-                    <type>bin</type>
-                    <classifier>rhel</classifier>
-                </dependency>
-                <dependency>
                     <groupId>com.intel.mtwilson.attestation-hub</groupId>
                     <artifactId>attestation-hub</artifactId>
                     <version>${project.version}</version>
@@ -298,6 +298,20 @@
                                         <mkdir dir="/tmp/makeself"/>
                                         <chmod perm="700" dir="/tmp/makeself"/>
                                         
+                                        <!-- ant run task for maven build pom_ubuntu and pom_rhel -->
+										
+                                        <exec executable="mvn"  dir="${project.basedir}" resultproperty="mavenExitBuildPackagesConfidentiality" failonerror="false">
+                                            <arg value="install"/>
+                                            <arg value="-fpom_ubuntu.xml"/>
+                                            <arg value="-Dconfidentiality"/>											
+                                        </exec>
+                                        
+                                        <exec executable="mvn"  dir="${project.basedir}" resultproperty="mavenExitBuildPackagesConfidentiality" failonerror="false">
+                                            <arg value="install"/>
+                                            <arg value="-fpom_rhel.xml"/>
+                                            <arg value="-Dconfidentiality"/>											
+                                        </exec>
+										
                                         <!-- package directory contains everything that should be included in the installer -->
                                         <mkdir dir="${project.build.directory}/${makeself.name}-${confidentiality.name}"/>
                                         <chmod perm="700">
@@ -402,20 +416,6 @@
                     <artifactId>mtwilson-openstack-controller-with-horizon</artifactId>
                     <version>${project.version}</version>
                     <type>bin</type>
-                </dependency>
-                <dependency>
-                    <groupId>com.intel.mtwilson.openstack.packages</groupId>
-                    <artifactId>mtwilson-openstack-trusted-node</artifactId>
-                    <version>${project.version}</version>
-                    <type>bin</type>
-                    <classifier>ubuntu</classifier>
-                </dependency>
-                <dependency>
-                    <groupId>com.intel.mtwilson.openstack.packages</groupId>
-                    <artifactId>mtwilson-openstack-trusted-node</artifactId>
-                    <version>${project.version}</version>
-                    <type>bin</type>
-                    <classifier>rhel</classifier>
                 </dependency>
                 <dependency>
                     <groupId>com.intel.mtwilson.attestation-hub</groupId>
